--- a/test/fixtures/receivers.yml
+++ b/test/fixtures/receivers.yml
@@ -1,6 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  name: MyString
   address: MyString
   country: MyString
   province: MyString
@@ -8,6 +9,7 @@ one:
   city: MyString
 
 two:
+  name: MyString
   address: MyString
   country: MyString
   province: MyString
