--- a/.travis.yml
+++ b/.travis.yml
@@ -24,4 +24,4 @@ deploy:
   run:
   - rake db:migrate
   - rake db:seed
-  - bundle exec sidekiq -q default -q mailers
+  - bundle exec sidekiq -q default -q mailers -c 2
