--- a/test/fixtures/answers.yml
+++ b/test/fixtures/answers.yml
@@ -1,11 +1,21 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  text: MyString
+  text: ImAnAnswer
   is_correct: false
   question: one
 
 two:
+  text: ImAnotherAnswer
+  is_correct: true
+  question: one
+
+three:
+  text: MyString
+  is_correct: true
+  question: two
+
+four:
   text: MyString
   is_correct: false
   question: two
